# Xclaim_Task

./: Readme.md  depot-release-ap_11ax_x2_ap-arm-qca-solo_112.1.0.0.3.tzg
buildroot/: Config.in  Makefile  release_version
buildroot/dl/: Python-2.7.9.tgz  binutils-2.16.1.tar.bz2  binutils-2.16.91.0.7.tar.bz2  binutils-2.18.tar.bz2  binutils-2.20.1.tar.bz2  gcc-3.4.4.tar.bz2  gcc-4.2.4.tar.bz2  gcc-4.3.5.tar.bz2  gdb-6.3.tar.bz2  gdb-6.8.tar.bz2  insight-5.3.tar.bz2  linux-libc-headers-2.4.31.tar.bz2  openldap-stable-20070110.tgz  pci.ids.bz2
buildroot/package/director/: director.mk
buildroot/package/libglib12/: glib-1.2.10-libtool.patch.bz2
buildroot/package/lipe/: lipe.mk
buildroot/toolchain/tensilica/chips/ar988x/: peregrine_RD-2011.2-linux-redist.tgz
buildroot/toolchain/tensilica/chips/ar988x/RD-2011.2-linux/peregrine/: build.info  config.html  install
buildroot/toolchain/tensilica/peregrine/: default-params  init_code.c
buildroot/toolchain/tensilica/tools/: XtensaTools_RD_2011_2_linux.tgz  XtensaTools_RD_2011_2_patch186147_linux.tgz
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/config/: default-params  peregrine-params
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/include/: xtensa-ctype.h  xtensa-isa-interface.h  xtensa-isa.h  xtensa-libdb.h  xtensa-params.h  xtensa-tie-interface.h
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/info/: as.info  bfd.info  binutils.info  dir  gdb.info  gprof.info  iostream.info  ld.info  libc.info  libm.info
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/xtensa-elf/src/libgcc-xcc/: Makefile.in  README  auto-host.h  config.gcc  configure  configure.in  mklibgcc.in  options.h  unwind-pe.h
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/xtensa-elf/src/libgcc-xcc/config/xtensa/: crti.asm  crtn.asm  dfpemu_cmp_inline.h  dfpemu_fp.h  elf.h  ieee754-df.S  lib1funcs.asm  lib2funcs.S  linux.h  t-elf  t-linux  t-xtensa  unwind-dw2-xtensa.c  vec_memcpy.c  vec_memset.c  xtensa-unwind.h  xtensa.h
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/xtensa-elf/src/libgdbio/: Makefile.in  close.c  configure  configure.in  fstat.c  gdbio.h  gdbio_syscalls.h  getpid.c  gettimeofday.c  kill.c  lseek.c  miniboard.c  open.c  read.c  rename.c  sbrk.c  semihosting.c  stat.c  syscall.S  system.c  times.c  unlink.c  write.c
buildroot/toolchain/tensilica/tools/RD-2011.2-linux/XtensaTools/xtensa-elf/src/uclibc/libgloss/xtensa/: Makefile.in  configure  configure.in
linux/kernels/linux-mips/: Makefile
linux/kernels/linux-mips/arch/mips/: Makefile
linux/kernels/linux-mips/arch/mips/kernel/: cevt-r4k.c  head.S  module.c
linux/kernels/linux-mips/arch/mips/oprofile/: backtrace.c
linux/kernels/linux-mips/arch/mips/pci/: fixup-ar531x.c  fixup-ar7100.c  ops-ar531x.c  pci-ar531x.c  pci-ar7100.c
linux/kernels/linux-mips/arch/powerpc/ramdisk/: ld.script
linux/kernels/linux-mips/arch/x86/kernel/: setup.c  v54_mem_setup.c
linux/kernels/linux-mips/crypto/: tcrypt.c
linux/kernels/linux-mips/drivers/char/: mem.c
linux/kernels/linux-mips/drivers/mtd/: Kconfig  redboot.c
linux/kernels/linux-mips/drivers/mtd/devices/: ar7100_flash.c  ar9100_pflash.c  ath_flash.c  ath_flash.h  fsl_m25p80.c  spiflash.c  spiflash.h
linux/kernels/linux-mips/drivers/net/: gianfar_ethtool.c  macProc.h  pcnet32.c  pppol2tp.c  proc_eth.c  tun.c
linux/kernels/linux-mips/drivers/net/ag7100/: Makefile  adm_phy.c  ag7100.c  ag7100.h  ag7100_phy.h  ag7100_trc.h  ar7240_s26_phy.c  ar7240_s26_phy.h  athr_phy.h  athrf1_phy.c  athrs16_phy.c  athrs16_phy.h  athrs26_phy.c  bcmPhy.c  bcmPhy.h  brcmPhy.c  brcmPhy.h  ipPhy.c  lantiq_phy.c  lantiq_phy.h  mvPhy.c  mvPhy.h  proc_eth.c  rtPhy.c  rtPhy.h  rtl8363Phy.c  rtl8363_asicdrv.c  rtl8363_asicdrv.h  rtl_types.h  vsc73xx.c  vsc8601_phy.c  vsc_phy.c
linux/kernels/linux-mips/drivers/net/atheros/: Makefile  Makefile.inc  ag934x.c  athrs_flowmac.c  athrs_gmac_ctrl.c  athrs_mac.c  athrs_mac_timer.c  athrs_phy_ctrl.c  proc_eth.c  vlan_igmp.c
linux/kernels/linux-mips/drivers/net/e1000/: e1000_main.c
linux/kernels/linux-mips/drivers/net/e1000e/: lib.c
linux/kernels/linux-mips/drivers/net/igb/: igb_main.c
linux/kernels/linux-mips/drivers/net/qca955x/: Makefile  Makefile.inc  athrs_flowmac.c  athrs_gmac_ctrl.c  athrs_mac.c  athrs_mac_timer.c  athrs_phy_ctrl.c  proc_eth.c  qca955x.c  qca_soc_mac.c
linux/kernels/linux-mips/drivers/net/qca955x_s17/: Makefile  Makefile.inc
linux/kernels/linux-mips/drivers/net/usb/: sierra_net.c
linux/kernels/linux-mips/drivers/rtc/: rtc-m41t00.c
linux/kernels/linux-mips/drivers/serial/: hornet_serial.c
linux/kernels/linux-mips/drivers/usb/core/: driver.c
linux/kernels/linux-mips/drivers/usb/gadget/: ar9130_otg.c  ar9130_otg.h  ath_udc.c
linux/kernels/linux-mips/drivers/usb/host/: ehci-ar7100.c  ehci-ar9130.c  ehci-hcd.c  ehci-q.c  ohci-ar7100.c
linux/kernels/linux-mips/drivers/usb/serial/: sierra.c
linux/kernels/linux-mips/fs/: compat_ioctl.c
linux/kernels/linux-mips/fs/partitions/: msdos.c
linux/kernels/linux-mips/fs/proc/: array.c  tasklets.c
linux/kernels/linux-mips/include/linux/: if_bridge.h  if_pppol2tp.h  kernel.h  kernel_stat.h  netdevice.h  skbuff.h  usb.h
linux/kernels/linux-mips/init/: do_mounts.c  do_mounts_initrd.c
linux/kernels/linux-mips/kernel/: panic.c  printk.c  signal.c  softlockup.c
linux/kernels/linux-mips/kernel/irq/: manage.c
linux/kernels/linux-mips/net/: socket.c
linux/kernels/linux-mips/net/8021q/: vlan.h  vlan_dev.c
linux/kernels/linux-mips/net/bridge/: Kconfig  br_arp.c  br_device.c  br_fdb.c  br_input.c  br_ioctl.c  br_ipdb.c  br_ipv6db.c  br_private.h  br_stp.c
linux/kernels/linux-mips/net/core/: dev.c  skbuff.c  sock.c
linux/kernels/linux-mips/net/ipv4/: Makefile  arp.c  ip_gre.c  route.c
linux/kernels/linux-mips/net/ipv6/: udp.c
linux/kernels/linux-mips/net/packet/: af_packet.c
linux/kernels/linux-mips/net/unix/: af_unix.c
linux/kernels/linux-mips/net/wireless/: wext.c
(+2772 files in other folders)
