# Copyright (c) 2006 by Tensilica Inc.  ALL RIGHTS RESERVED.
# These coded instructions, statements, and computer programs are the
# copyrighted works and confidential proprietary information of Tensilica Inc.
# They may not be modified, copied, reproduced, distributed, or disclosed to
# third parties in any manner, medium, or form, in whole or in part, without
# the prior written consent of Tensilica Inc.

AC_PREREQ(2.13)
AC_INIT(gdbio_syscalls.h)
AC_CONFIG_AUX_DIR(../..)

AC_CANONICAL_SYSTEM
AC_PROG_INSTALL
AC_PROG_CC

AC_OUTPUT(Makefile)
